--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <strong>Ideias para a Ísis:</strong>
                 <ul style="padding-left: 20px; margin: 10px 0;">
                     <li>Roupas (Tamanho 3 ou 4)</li>
-                    <li>Brinquedos educativos</li>
+                    <li>Brinquedos</li>
                     <li>Calçados nº 20/21</li>
                 </ul>
             </div>
