Add observation for guests in index.html
Added an observation note about bringing consumption and cooler.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             border: none;
             font-family: 'Varela Round', sans-serif;
             font-size: 1em;
+
+            
         }
 
         .btn-presente { background-color: #ff8c00; color: white; }
@@ -120,6 +122,11 @@
             font-size: 1em; 
             color: #666; 
             padding-bottom: 10px; 
+        }
+
+        .obs {
+            color: red;
+            font-family: sans-serif;
         }
     </style>
 </head>
@@ -161,6 +168,8 @@
             <a href="https://wa.me/5511980140554?text=Olá! Gostaria de confirmar presença no aniversário de 2 aninhos da Ísis!" target="_blank" class="btn btn-whatsapp">
                 ✅ Confirmar Presença
             </a>
+
+            <div class="obs"><h5><strong>OBS: TRAGA SEU CONSUMO E SEU COOLER!!!</strong></h5></div>
 
             <div class="footer">
                 Espero você para essa festa deliciosa! 🍉
