--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 ✅ Confirmar Presença
             </a>
 
-            <div class="obs"><h5><strong>OBS: TRAGA SEU CONSUMO E SEU COOLER!!!</strong></h5></div>
+            <div class="obs"><h5><strong>OBS: TRAGA SEU CONSUMO DE BEBIDA ALCOÓLICA🍺!!!</strong></h5></div>
 
             <div class="footer">
                 Espero você para essa festa deliciosa! 🍉
